--- a/build.gradle
+++ b/build.gradle
@@ -25,5 +25,7 @@ dependencies {
 	providedRuntime('org.apache.tomcat.embed:tomcat-embed-jasper')
 	compile('org.projectlombok:lombok')
 	compile('org.springframework.boot:spring-boot-devtools')
+	
+	compile('org.springframework.security:spring-security-crypto')
 
 }
