--- a/build.gradle
+++ b/build.gradle
@@ -27,5 +27,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-devtools')
 	
 	compile('org.springframework.security:spring-security-crypto')
+	
+	compile("org.springframework.boot:spring-boot-starter-websocket")
 
 }
